<resources>

    <string name="admob_inter_id">ca-app-pub-4402674240600002/5903097370</string>
    <string name="admob_banner_org">ca-app-pub-4402674240600002/9415738578</string>
    <string name="admob_banner_id">ca-app-pub-4402674240600002/3912826573</string>
    <string name="title_section1">Data Input</string>
    <string name="title_section2">Weight Chart</string>
    <string name="title_section3">Section 3</string>

    <string name="hello_world">Hello world!</string>

    <string name="action_settings">Settings</string>

    <string name="app_name">Body Mass Index</string>

    <string name="bmi">Your BMI = ?</string>
    <string name="underweight">Underweight</string>
    <string name="overweight">Overweight</string>
    <string name="obesity">Obesity</string>

    <string name="data_saved">Data saved</string>
    <string name="choose_theme">Choose theme</string>
    <string name="greenTheme">Green</string>
    <string name="light">Light</string>
    <string name="dark">Dark</string>
    <string name="cancel">Cancel</string>
    <string name="ok">Okay</string>
    <string name="kg">kg</string>
    <string name="lb">lb</string>
    <string name="feet">feet</string>
    <string name="inches">inches</string>
    <string name="charts">Chart</string>
    <string name="menu_title">Menu</string>
    <string name="info">Information</string>

    <string name="rate_app">Rate this app!</string>
    <string name="feedback">Give your feedback</string>
    <string name="feedback_prompt">Hey, would you like to give us some feedback so that we can improve your experience?</string>
    <string name="opinion">Opinion</string>

    <string name="height">Your height</string>
    <string name="weight">Your weight</string>
    <string name="sex">Your sex</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="age">Your age</string>
    <string name="years">years</string>
    <string name="month">month</string>
    <string name="your_wgt">Your weight</string>
    <string name="no_data">No data available for this month</string>
    <string name="exercise">How often do you exercise?</string>
    <string name="your_calories">Your daily calories requirement is</string>
    <string name="invalidInput">Invalid data</string>
    <string name="emptyInput">Please enter data</string>
    <string name="your_bmi">Your BMI (Body Mass Index)</string>
    <string name="kcal">kcal</string>
    <string name="xx_low">Very severely underweight</string>
    <string name="x_low">Severely underweight</string>
    <string name="low">Underweight</string>
    <string name="normal">Normal (healthy weight)</string>
    <string name="high">Overweight</string>
    <string name="x_high">Moderately obese</string>
    <string name="xx_high">Severely obese</string>
    <string name="xxx_high">Very severely obese</string>

    <string name="save_close">Save</string>
    <string name="exit">Exit</string>
    <string name="settings">Settings</string>

    <string-array name="exercise">
        <item>Little or no exercise</item>
        <item>Light (1–3 days per week)</item>
        <item>Moderate (3–5 days per week)</item>
        <item>Heavy (6–7 days per week)</item>
        <item>Very heavy (twice per day)</item>
    </string-array>

    <string name="title_play">Body Mass Index</string>
    <string name="title_play_2">Basal Metabolic Ratio</string>
    <string name="title_play_3">Daily requirement for calories</string>

    <string name="desc_1">Find your Body Mass Index and Basal Metabolic Ratio.</string>
    <string name="desc_2">Find your Body Mass Index and your daily requirement for calories.</string>
    <string name="desc_3">Find index of mass of your body and your daily requirement for calories.</string>

    <string name="description_full">This application will calculate your BMI (Body Mass Index) and BMR (Basal Metabolic Ratio).

Body Mass Index is the most important indicator of human body mass. The application will assign you body mass to one of several categories from "very severely underweight" to "very severely obese". You will also be able to record your weight and track it over period of time. You can use chart, to watch changes your weight and Body Mass Index.

Basal Metabolic Ratio indicates the amount of calories that you should consume each day, in order to maintain your weight. In is calculated based on several factors including weight, age, sex and intensity of physical activity.</string>
</resources>
