<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    >
    
    <!--item
        android:id="@+id/action_search"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/search"/>    

 	<item
        android:id="@+id/action_favorites"
        android:orderInCategory="101"
        android:showAsAction="never"
        android:title="@string/favorites"/>
    
    <item
        android:id="@+id/action_diary"
        android:orderInCategory="102"
        android:showAsAction="never"
        android:title="@string/diary_"/>
        
    <item
        android:id="@+id/action_diary_chart"
        android:orderInCategory="103"
        android:showAsAction="never"
        android:title="@string/diary_graph"/>
    <item
        android:id="@+id/action_info"
        android:orderInCategory="106"
        android:showAsAction="never"
        android:title="@string/info"/>
    
    <item
        android:id="@+id/action_weight_chart"
        android:orderInCategory="104"
        app:showAsAction="never"
        android:title="@string/charts"/>    
    
    <item
        android:id="@+id/action_settings"
        android:orderInCategory="105"
        app:showAsAction="never"
        android:title="@string/settings"/-->
    
    <item
        android:id="@+id/action_rate_app"
        android:orderInCategory="107"
        app:showAsAction="never"
        android:title="@string/rate_app"/>     
        
    <item
        android:id="@+id/action_feedback"
        android:orderInCategory="108"
        app:showAsAction="never"
        android:title="@string/feedback"/>  
        
    <!--item
        android:id="@+id/action_translate"
        android:orderInCategory="109"
        android:showAsAction="never"
        android:title="@string/help_translate"/-->

    <item
        android:id="@+id/action_theme"
        android:orderInCategory="110"
        app:showAsAction="never"
        android:title="@string/choose_theme"/>


</menu>